# cossolve

./: CMakeLists.txt
python/: .gdb_history  test.py
python/cossolve/: Solver.py  __init__.py
src/: .#CossolveTypes.h  BlockMatrix.cpp  BlockMatrix.h  ConstraintList.h  CossolveTypes.h  ForceList.h  Indexer.h  LieGroupOps.cpp  LieGroupOps.h  Logger.h  MatrixConstructor.cpp  MatrixConstructor.h  MatrixOps.cpp  MatrixOps.h  Precomputed.cpp  Precomputed.h  Solver.cpp  Solver.h  SolverParameters.h  StaticSolver.cpp  StaticSolver.h  SystemMatrix.cpp  SystemMatrix.h  SystemVector.cpp  SystemVector.h  TwistJacobian.cpp  TwistJacobian.h  capi.cpp  capi.h  config.h  se3.cpp  se3.h
test/: test.cpp
